tracker: Autospec creation for version 2.0.3

--- a/options.conf
+++ b/options.conf
@@ -1,3 +1,9 @@
+[package]
+name = tracker
+url = https://download.gnome.org/sources/tracker/2.0/tracker-2.0.3.tar.xz
+archives = 
+giturl = https://github.com/GNOME/tracker.git
+
 [autospec]
 # build 32 bit libraries
 32bit = false
@@ -5,6 +11,8 @@
 allow_test_failures = true
 # unset %build ld_as_needed variable
 asneeded = false
+# this package is trusted enough to automatically update (used by other tools)
+autoupdate = false
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
