--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = tracker
-url = https://download.gnome.org/sources/tracker/2.1/tracker-2.1.4.tar.xz
+url = https://download.gnome.org/sources/tracker/2.1/tracker-2.1.5.tar.xz
 archives = 
 giturl = https://github.com/GNOME/tracker.git
 
@@ -21,6 +21,8 @@ broken_parallel_build = false
 compat = false
 # set conservative build flags
 conservative_flags = false
+# dev package requires the extras to be installed
+dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
 # optimize build for speed over size
