--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,16 +1,18 @@
-option('docs', type: 'boolean', value: true,
-       description: 'Enable the documentation')
+option('docs', type: 'boolean', value: false,
+       description: 'Generate API documentation with gtk-doc')
 option('fts', type: 'boolean', value: true,
        description: 'Enable the Tracker full-text search feature')
 option('functional_tests', type: 'boolean', value: true,
        description: 'Enable the Tracker functional test suite')
 option('journal', type: 'boolean', value: true,
        description: 'Enable database journal backup mechanism')
+option('man', type: 'boolean', value: true,
+       description: 'Install man pages')
 
-option('network_manager', type: 'combo', choices: ['auto', 'no', 'yes'], value: 'auto',
-       description: 'Enable connection detection through NetworkManager')
-option('stemmer', type: 'combo', choices: ['auto', 'no', 'yes'], value: 'auto',
-       description: 'Enable stemming words while indexing')
+option('network_manager', type: 'feature', value: 'auto',
+       description: 'Connection detection through NetworkManager')
+option('stemmer', type: 'feature', value: 'auto',
+       description: 'Stemming words while indexing')
 option('unicode_support', type: 'combo', choices: ['icu', 'unistring', 'auto'], value: 'auto',
        description: 'Unicode support library to use')
 
