--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = tracker
-url = https://download.gnome.org/sources/tracker/2.2/tracker-2.2.2.tar.xz
+url = https://download.gnome.org/sources/tracker/2.3/tracker-2.3.0.tar.xz
 archives = 
 giturl = https://github.com/GNOME/tracker.git
 
@@ -33,6 +33,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not generate debuginfo for this package
+nodebug = false
 # disable stripping binaries
 nostrip = false
 # optimize build for size over speed
