tracker: Autospec creation for version 2.3.1

--- a/options.conf
+++ b/options.conf
@@ -1,8 +1,9 @@
 [package]
 name = tracker
-url = https://download.gnome.org/sources/tracker/2.3/tracker-2.3.0.tar.xz
+url = https://download.gnome.org/sources/tracker/2.3/tracker-2.3.1.tar.xz
 archives = 
 giturl = https://github.com/GNOME/tracker.git
+domain = 
 
 [autospec]
 # build 32 bit libraries
@@ -17,7 +18,7 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
-# this package is a library compatability package and only ships versioned library files
+# this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
 conservative_flags = false
