--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = tracker
-url = https://download.gnome.org/sources/tracker/2.3/tracker-2.3.1.tar.xz
+url = https://download.gnome.org/sources/tracker/2.3/tracker-2.3.4.tar.xz
 archives = 
 giturl = https://github.com/GNOME/tracker.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -38,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
