tracker: Autospec creation for version 2.3.4

--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = tracker
 url = https://download.gnome.org/sources/tracker/2.3/tracker-2.3.4.tar.xz
 archives = 
-giturl = https://github.com/GNOME/tracker.git
+giturl = https://gitlab.gnome.org/GNOME/tracker
 domain = 
 alias = 
 
