--- a/meson_options.txt
+++ b/meson_options.txt
@@ -16,11 +16,13 @@ option('bash_completion_dir', type: 'string',
        description: 'Directory to install Bash completion files')
 option('dbus_services_dir', type: 'string', value: '',
        description: 'Directory to install D-Bus .service files (or empty to use default)')
-option('systemd_user_services', type: 'boolean', value: true,
+option('systemd_user_services', type: 'boolean', value: true, yield: true,
        description: 'Whether to install systemd user .service files')
-option('systemd_user_services_dir', type: 'string', value: '',
+option('systemd_user_services_dir', type: 'string', value: '', yield: true,
        description: 'Directory to install systemd user unit files (or empty to use default)')
 option('test_utils', type: 'boolean', value: true,
        description: 'Whether to install the trackertestutils Python package')
 option('test_utils_dir', type: 'string', value: '',
        description: 'Directory to install trackertestutils Python package (or empty to use the default)')
+option('tests_tap_protocol', type: 'boolean', value: false,
+       description: 'Whether to enable TAP protocol on tests')
