--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = tracker
-url = https://download.gnome.org/sources/tracker/3.2/tracker-3.2.0.tar.xz
+url = https://download.gnome.org/sources/tracker/3.2/tracker-3.2.1.tar.xz
 archives = 
 giturl = https://gitlab.gnome.org/GNOME/tracker
 domain = 
@@ -47,6 +47,8 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
