--- a/meson_options.txt
+++ b/meson_options.txt
@@ -20,6 +20,8 @@ option('systemd_user_services', type: 'boolean', value: true, yield: true,
        description: 'Whether to install systemd user .service files')
 option('systemd_user_services_dir', type: 'string', value: '', yield: true,
        description: 'Directory to install systemd user unit files (or empty to use default)')
+option('tests', type: 'boolean', value: true,
+       description: 'Whether to build tests')
 option('test_utils', type: 'boolean', value: true,
        description: 'Whether to install the trackertestutils Python package')
 option('test_utils_dir', type: 'string', value: '',
@@ -28,3 +30,7 @@ option('tests_tap_protocol', type: 'boolean', value: false,
        description: 'Whether to enable TAP protocol on tests')
 option('introspection', type: 'feature', value: 'enabled',
        description: 'Whether to enable introspection')
+
+option('soup', type: 'array', value: ['auto'],
+       choices: ['auto', 'soup2', 'soup3'],
+       description: 'Which major versions of libsoup to use')
