--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = tracker
-url = https://download.gnome.org/sources/tracker/3.4/tracker-3.4.0.tar.xz
+url = https://download.gnome.org/sources/tracker/3.4/tracker-3.4.1.tar.xz
 archives = 
 giturl = https://gitlab.gnome.org/GNOME/tracker
 domain = 
@@ -35,6 +35,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
