tracker: Autospec creation for update from version 3.4.2 to version 3.5.0
Aleksandr Melman (1):
      Update Russian translation

Alexander Shopov (1):
      Update Bulgarian translation

Anders Jonsson (1):
      Update Swedish translation

Asier Sarasua Garmendia (1):
      Update Basque translation

Ask Hjorth Larsen (1):
      Updated Danish translation

Aurimas Černius (1):
      Update Lithuanian translation

Balázs Úr (1):
      Update Hungarian translation

Carlos Garnacho (170):
      libtracker-sparql: Add versioning macros for 3.5.x
      build: Bump version to 3.5.0.alpha
      core: Move filter clauses list to TrackerSparqlState
      core: Move prefix map to TrackerSparqlState
      core: Move cached parameters/bindings to TrackerSparqlState
      core: Move anon/named graph arrays to TrackerSparqlState
      core: Shuffle root node initialization
      core: Move URI base to TrackerSparqlState
      core: Move resulting TrackerStringBuilder buffer to TrackerSparqlState
      core: Rename function
      core: Move graph/service constraint policies to TrackerSparqlState
      core: Do not process early the SPARQL query on readonly queries
      core: Move cacheable TrackerSelectContext data to TrackerSparql
      core: Move topmost TrackerContext to TrackerSparqlState
      core: Drop tracker_sparql_reset_state()
      ci: Ignore uncrustify calls resulting in unsuccessful return codes
      check-style: Allow deciding on individual suggestions with --rewrite
      build: Build GVDB as a Meson subproject
      tests: Fix code style issues in GVDB tests
      core: Refactor code
      core: Add SparqlPrintValue() SQL function
      core: Use SparqlPrintValue SQL function in generated SQL
      core: Handle conversion of variables with a propagated type
      core: Fix isBlank() SPARQL function
      core: Propagate the right value type on object literal binding
      core: Use raw object value when querying for unrestricted predicates
      core: Use raw 

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -30,6 +30,8 @@ option('tests_tap_protocol', type: 'boolean', value: false,
        description: 'Whether to enable TAP protocol on tests')
 option('introspection', type: 'feature', value: 'enabled',
        description: 'Whether to enable introspection')
+option('vapi', type: 'feature', value: 'enabled',
+       description: 'Whether to enable Vala binding generation')
 
 option('soup', type: 'array', value: ['auto'],
        choices: ['auto', 'soup2', 'soup3'],
