tracker: Autospec creation for update from version 3.6.0 to version 3.7.0
Anders Jonsson (1):
      Update Swedish translation

Andi Chandler (1):
      Update British English translation

Andika Triwidada (1):
      Update Indonesian translation

Andre Klapper (1):
      README: IRC: 'This channel has been migrated to Libera.Chat (#gnome-tracker)'

Artur S0 (1):
      Update Russian translation

Asier Sarasua Garmendia (1):
      Update Basque translation

Ask Hjorth Larsen (1):
      Update Danish translation

Aurimas Černius (1):
      Update Lithuanian translation

Balázs Úr (1):
      Update Hungarian translation

Carlos Garnacho (193):
      portal: Steal error being propagated.
      tests: Drop out of place fts:rank usage
      core: Raise error if using fts:rank outside of FTS query
      core: Handle SelectClause between group/having and order/limits
      core: Explicitly handle undefined variables in order clauses
      core: Use '' in SQL for all string literals
      libtracker-sparql: Bail out earlier if cancelled on TrackerNotifier
      direct: Unify select/update query data in a single struct
      direct: Use TrackerDirectConnection thread pool for statement queries
      direct: Drop mutex usage from query paths
      libtracker-sparql: Avoid "unused return value" warnings from g_string_free()
      tests: Fix more g_string_free() related warnings
      docs: Fix regex to detect {{ }} jinja-style embedding
      docs: Check file existence merging JSON files
      libtracker-sparql: Drop unnecessary vapigen metadata rules
      docs: Drop logging when generating the CLI reference
      ci: Tell gcovr to ignore bugs
      tests: Minor cleanup
      tests: Restructure ontology change tests
      tests: Split ontology change test source files per test
      tests: Drop code to compare multiple queries in ontology change tests
      tests: Do not strtok updates
      tests: Support expected query/update errors in ontology change tests
      tests: Add

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -9,6 +9,8 @@ option('stemmer', type: 'feature', value: 'auto',
        description: 'Stemming words while indexing')
 option('unicode_support', type: 'combo', choices: ['icu', 'unistring', 'auto'], value: 'auto',
        description: 'Unicode support library to use')
+option('avahi', type: 'feature', value: 'auto',
+       description: 'DNS-SD support on HTTP endpoints')
 
 option('bash_completion', type: 'boolean', value: true,
        description: 'Whether to install Bash completion files')
