--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = tracker
-url = https://download.gnome.org/sources/tracker/3.6/tracker-3.6.0.tar.xz
+url = https://download.gnome.org/sources/tracker/3.7/tracker-3.7.0.tar.xz
 archives = 
 giturl = https://gitlab.gnome.org/GNOME/tracker
 domain = 
@@ -9,6 +9,8 @@ alias =
 [autospec]
 # build 32 bit libraries
 32bit = false
+# allow windows executables (*.exe, *.dll) to be packaged
+allow_exe = false
 # allow package to build with test failures
 allow_test_failures = true
 # unset %build ld_as_needed variable
@@ -59,6 +61,8 @@ server = false
 skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
+# configure build for apx
+use_apx = false
 # configure build for avx2
 use_avx2 = true
 # configure build for avx512
