tracker: Autospec creation for update from version 3.7.3 to version 3.8.0
Aefgh Threenine (1):
      Update Thai translation

Alexander Shopov (1):
      Update Bulgarian translation

Alyssa Ross (2):
      build: Make libdl optional
      examples: Check introspection is enabled for python

Anders Jonsson (1):
      Update Swedish translation

Andika Triwidada (1):
      Update Indonesian translation

Artur S0 (3):
      Update Russian translation
      Update Russian translation
      Update Russian translation

Asier Sarasua Garmendia (2):
      Update Basque translation
      Update Basque translation

Ask Hjorth Larsen (1):
      Update Danish translation

Aurimas Černius (2):
      Update Lithuanian translation
      Update Lithuanian translation

Balázs Úr (2):
      Update Hungarian translation
      Update Hungarian translation

Bruce Cowan (1):
      Update British English translation

Carlos Garnacho (264):
      libtracker-common: Use "once" pragma in headers
      docs: Use "once" pragma in headers
      tests: Use "once" pragma in headers
      cli: Use "once" pragma in headers
      portal: Use "once" pragma in headers
      libtracker-sparql: Use "once" pragma in headers
      build: Install tinysparql-3.0.pc file along with tracker-sparql-3.0
      build: Install Tsparql-3.0 GIR file along with Tracker-3.0
      build: Install tinysparql-3.0 VAPI file along with tracker-sparql-3.0
      cli: Rename install location for internal desktop files
      build: Rename install location for internal libraries
      docs: Rename docs namespace
      docs: Shed namespace in gi-docgen references
      docs: Change textual references to Tracker in docs
      cli: Rename CLI executable(s)
      build: Rename headers install location and main header file
      build: Rename .so library file name
      docs: Update examples to use new includes/imports/namespaces
      build: Rename portal executable and systemd service
      docs: Rename man pages
      build: Chan

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = tracker
-url = https://download.gnome.org/sources/tracker/3.7/tracker-3.7.3.tar.xz
+url = https://gitlab.gnome.org/GNOME/tinysparql/-/archive/3.8.0/tinysparql-3.8.0.tar.bz2
 archives = 
 giturl = https://gitlab.gnome.org/GNOME/tracker
 domain = 
@@ -17,6 +17,8 @@ allow_test_failures = true
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
 autoupdate = false
+# try to use mock short circuit to avoid full rebuilds
+avoid_rebuild = false
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
@@ -71,6 +73,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = true
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = false
 
